@@ -180,6 +180,8 @@ $(document).ready (function () {
 					inputs.push ('filter=delete_pending = 0 AND id_agente_modulo NOT IN (SELECT id_agente_modulo FROM tagente_estado WHERE utimestamp = 0)');
 					inputs.push ("get_agent_modules_json=1");
 					inputs.push ("page=operation/agentes/ver_agente");
+					/* This will force to get local modules although metaconsole is active */
+					inputs.push ("force_local_modules=1");
 					jQuery.ajax ({
 						data: inputs.join ("&"),
 						type: 'GET',
